// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/additional-tabs/AdditionalTab should render the more icon ellipsis if no valid id and icon URL are provided 1`] = `
<Tooltip
  position="middle-left"
  text="test title"
>
  <PlainButton
    className="bcs-nav-btn"
    onClick={[Function]}
    type="button"
  >
    <IconEllipsis
      className="bdl-AdditionalTab-moreIcon"
    />
  </PlainButton>
</Tooltip>
`;

exports[`elements/content-sidebar/additional-tabs/AdditionalTab should render the tooltip and button contents 1`] = `
<Tooltip
  position="middle-left"
  text="test title"
>
  <PlainButton
    className="bcs-nav-btn"
    onClick={[Function]}
    type="button"
  >
    <img
      alt="test title"
      className="bdl-AdditionalTab-icon"
      src="https://foo.com/image"
    />
  </PlainButton>
</Tooltip>
`;
